aulas-praticas/ap3/antlr4-python3-runtime-4.7.2/src/autogen/CymbolParser.py
# Generated from antlr4-python3-runtime-4.7.2/src/autogen/Cymbol.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class CymbolParser ( Parser ):

    grammarFileName = "Cymbol.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'void'", "'boolean'", "'string'", 
                     "'float'", "'if'", "'else'", "'return'", "'('", "')'", 
                     "','", "';'", "'{'", "'}'", "'='", "'=='", "'!='", 
                     "'!'", "'>'", "'<'", "'>='", "'<='", "'*'", "'/'", 
                     "'+'", "'-'", "'||'", "'&&'" ]

    symbolicNames = [ "<INVALID>", "TYPEINT", "TYPEVOID", "TYPEBOOLEAN", 
                      "TYPESTRING", "TYPEFLOAT", "IF", "ELSE", "RETURN", 
                      "LP", "RP", "COMMA", "SEMICOLON", "LB", "RB", "AS", 
                      "EQ", "NE", "NOT", "GT", "LT", "GE", "LE", "MUL", 
                      "DIV", "PLUS", "MINUS", "OR", "AND", "ID", "INT", 
                      "BOOLEAN", "STRING", "FLOAT", "BLOCKCOMMENT", "LINECOMMENT", 
                      "WS" ]

    RULE_fiile = 0
    RULE_varDecl = 1
    RULE_tyype = 2
    RULE_funcDecl = 3
    RULE_paramTypeList = 4
    RULE_paramType = 5
    RULE_block = 6
    RULE_assignStat = 7
    RULE_returnStat = 8
    RULE_ifElseStat = 9
    RULE_ifElseExprStat = 10
    RULE_exprStat = 11
    RULE_exprList = 12
    RULE_ifStat = 13
    RULE_elseStat = 14
    RULE_stat = 15
    RULE_expr = 16

    ruleNames =  [ "fiile", "varDecl", "tyype", "funcDecl", "paramTypeList", 
                   "paramType", "block", "assignStat", "returnStat", "ifElseStat", 
                   "ifElseExprStat", "exprStat", "exprList", "ifStat", "elseStat", 
                   "stat", "expr" ]

    EOF = Token.EOF
    TYPEINT=1
    TYPEVOID=2
    TYPEBOOLEAN=3
    TYPESTRING=4
    TYPEFLOAT=5
    IF=6
    ELSE=7
    RETURN=8
    LP=9
    RP=10
    COMMA=11
    SEMICOLON=12
    LB=13
    RB=14
    AS=15
    EQ=16
    NE=17
    NOT=18
    GT=19
    LT=20
    GE=21
    LE=22
    MUL=23
    DIV=24
    PLUS=25
    MINUS=26
    OR=27
    AND=28
    ID=29
    INT=30
    BOOLEAN=31
    STRING=32
    FLOAT=33
    BLOCKCOMMENT=34
    LINECOMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FiileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(CymbolParser.FuncDeclContext,i)


        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(CymbolParser.VarDeclContext,i)


        def EOF(self):
            return self.getToken(CymbolParser.EOF, 0)

        def getRuleIndex(self):
            return CymbolParser.RULE_fiile

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFiile" ):
                return visitor.visitFiile(self)
            else:
                return visitor.visitChildren(self)




    def fiile(self):

        localctx = CymbolParser.FiileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_fiile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 34
                    self.funcDecl()
                    pass

                elif la_ == 2:
                    self.state = 35
                    self.varDecl()
                    pass


                self.state = 38 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CymbolParser.TYPEINT) | (1 << CymbolParser.TYPEVOID) | (1 << CymbolParser.TYPEBOOLEAN) | (1 << CymbolParser.TYPESTRING) | (1 << CymbolParser.TYPEFLOAT))) != 0)):
                    break

            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 40
                self.match(CymbolParser.EOF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tyype(self):
            return self.getTypedRuleContext(CymbolParser.TyypeContext,0)


        def ID(self):
            return self.getToken(CymbolParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(CymbolParser.SEMICOLON, 0)

        def AS(self):
            return self.getToken(CymbolParser.AS, 0)

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = CymbolParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.tyype()
            self.state = 44
            self.match(CymbolParser.ID)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CymbolParser.AS:
                self.state = 45
                self.match(CymbolParser.AS)
                self.state = 46
                self.expr(0)


            self.state = 49
            self.match(CymbolParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TyypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CymbolParser.RULE_tyype

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FormTypeFloatContext(TyypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.TyypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPEFLOAT(self):
            return self.getToken(CymbolParser.TYPEFLOAT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormTypeFloat" ):
                return visitor.visitFormTypeFloat(self)
            else:
                return visitor.visitChildren(self)


    class FormTypeIntContext(TyypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.TyypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPEINT(self):
            return self.getToken(CymbolParser.TYPEINT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormTypeInt" ):
                return visitor.visitFormTypeInt(self)
            else:
                return visitor.visitChildren(self)


    class FormTypeBooleanContext(TyypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.TyypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPEBOOLEAN(self):
            return self.getToken(CymbolParser.TYPEBOOLEAN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormTypeBoolean" ):
                return visitor.visitFormTypeBoolean(self)
            else:
                return visitor.visitChildren(self)


    class FormTypeStringContext(TyypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.TyypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPESTRING(self):
            return self.getToken(CymbolParser.TYPESTRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormTypeString" ):
                return visitor.visitFormTypeString(self)
            else:
                return visitor.visitChildren(self)


    class FormTypeVoidContext(TyypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.TyypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPEVOID(self):
            return self.getToken(CymbolParser.TYPEVOID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormTypeVoid" ):
                return visitor.visitFormTypeVoid(self)
            else:
                return visitor.visitChildren(self)



    def tyype(self):

        localctx = CymbolParser.TyypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tyype)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CymbolParser.TYPEINT]:
                localctx = CymbolParser.FormTypeIntContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(CymbolParser.TYPEINT)
                pass
            elif token in [CymbolParser.TYPEVOID]:
                localctx = CymbolParser.FormTypeVoidContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.match(CymbolParser.TYPEVOID)
                pass
            elif token in [CymbolParser.TYPEBOOLEAN]:
                localctx = CymbolParser.FormTypeBooleanContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.match(CymbolParser.TYPEBOOLEAN)
                pass
            elif token in [CymbolParser.TYPESTRING]:
                localctx = CymbolParser.FormTypeStringContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 54
                self.match(CymbolParser.TYPESTRING)
                pass
            elif token in [CymbolParser.TYPEFLOAT]:
                localctx = CymbolParser.FormTypeFloatContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 55
                self.match(CymbolParser.TYPEFLOAT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tyype(self):
            return self.getTypedRuleContext(CymbolParser.TyypeContext,0)


        def ID(self):
            return self.getToken(CymbolParser.ID, 0)

        def LP(self):
            return self.getToken(CymbolParser.LP, 0)

        def RP(self):
            return self.getToken(CymbolParser.RP, 0)

        def block(self):
            return self.getTypedRuleContext(CymbolParser.BlockContext,0)


        def paramTypeList(self):
            return self.getTypedRuleContext(CymbolParser.ParamTypeListContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = CymbolParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.tyype()
            self.state = 59
            self.match(CymbolParser.ID)
            self.state = 60
            self.match(CymbolParser.LP)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CymbolParser.TYPEINT) | (1 << CymbolParser.TYPEVOID) | (1 << CymbolParser.TYPEBOOLEAN) | (1 << CymbolParser.TYPESTRING) | (1 << CymbolParser.TYPEFLOAT))) != 0):
                self.state = 61
                self.paramTypeList()


            self.state = 64
            self.match(CymbolParser.RP)
            self.state = 65
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamTypeListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.ParamTypeContext)
            else:
                return self.getTypedRuleContext(CymbolParser.ParamTypeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CymbolParser.COMMA)
            else:
                return self.getToken(CymbolParser.COMMA, i)

        def getRuleIndex(self):
            return CymbolParser.RULE_paramTypeList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamTypeList" ):
                return visitor.visitParamTypeList(self)
            else:
                return visitor.visitChildren(self)




    def paramTypeList(self):

        localctx = CymbolParser.ParamTypeListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramTypeList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.paramType()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CymbolParser.COMMA:
                self.state = 68
                self.match(CymbolParser.COMMA)
                self.state = 69
                self.paramType()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tyype(self):
            return self.getTypedRuleContext(CymbolParser.TyypeContext,0)


        def ID(self):
            return self.getToken(CymbolParser.ID, 0)

        def getRuleIndex(self):
            return CymbolParser.RULE_paramType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamType" ):
                return visitor.visitParamType(self)
            else:
                return visitor.visitChildren(self)




    def paramType(self):

        localctx = CymbolParser.ParamTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.tyype()
            self.state = 76
            self.match(CymbolParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(CymbolParser.LB, 0)

        def RB(self):
            return self.getToken(CymbolParser.RB, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.StatContext)
            else:
                return self.getTypedRuleContext(CymbolParser.StatContext,i)


        def getRuleIndex(self):
            return CymbolParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = CymbolParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(CymbolParser.LB)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CymbolParser.TYPEINT) | (1 << CymbolParser.TYPEVOID) | (1 << CymbolParser.TYPEBOOLEAN) | (1 << CymbolParser.TYPESTRING) | (1 << CymbolParser.TYPEFLOAT) | (1 << CymbolParser.IF) | (1 << CymbolParser.RETURN) | (1 << CymbolParser.LP) | (1 << CymbolParser.NOT) | (1 << CymbolParser.PLUS) | (1 << CymbolParser.MINUS) | (1 << CymbolParser.ID) | (1 << CymbolParser.INT) | (1 << CymbolParser.BOOLEAN) | (1 << CymbolParser.STRING) | (1 << CymbolParser.FLOAT))) != 0):
                self.state = 79
                self.stat()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self.match(CymbolParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CymbolParser.ID, 0)

        def AS(self):
            return self.getToken(CymbolParser.AS, 0)

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(CymbolParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CymbolParser.RULE_assignStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStat" ):
                return visitor.visitAssignStat(self)
            else:
                return visitor.visitChildren(self)




    def assignStat(self):

        localctx = CymbolParser.AssignStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(CymbolParser.ID)
            self.state = 88
            self.match(CymbolParser.AS)
            self.state = 89
            self.expr(0)
            self.state = 90
            self.match(CymbolParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(CymbolParser.RETURN, 0)

        def SEMICOLON(self):
            return self.getToken(CymbolParser.SEMICOLON, 0)

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_returnStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStat" ):
                return visitor.visitReturnStat(self)
            else:
                return visitor.visitChildren(self)




    def returnStat(self):

        localctx = CymbolParser.ReturnStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(CymbolParser.RETURN)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CymbolParser.LP) | (1 << CymbolParser.NOT) | (1 << CymbolParser.PLUS) | (1 << CymbolParser.MINUS) | (1 << CymbolParser.ID) | (1 << CymbolParser.INT) | (1 << CymbolParser.BOOLEAN) | (1 << CymbolParser.STRING) | (1 << CymbolParser.FLOAT))) != 0):
                self.state = 93
                self.expr(0)


            self.state = 96
            self.match(CymbolParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfElseStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStat(self):
            return self.getTypedRuleContext(CymbolParser.IfStatContext,0)


        def elseStat(self):
            return self.getTypedRuleContext(CymbolParser.ElseStatContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_ifElseStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseStat" ):
                return visitor.visitIfElseStat(self)
            else:
                return visitor.visitChildren(self)




    def ifElseStat(self):

        localctx = CymbolParser.IfElseStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifElseStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.ifStat()
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 99
                self.elseStat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfElseExprStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(CymbolParser.BlockContext,0)


        def ifElseStat(self):
            return self.getTypedRuleContext(CymbolParser.IfElseStatContext,0)


        def returnStat(self):
            return self.getTypedRuleContext(CymbolParser.ReturnStatContext,0)


        def assignStat(self):
            return self.getTypedRuleContext(CymbolParser.AssignStatContext,0)


        def exprStat(self):
            return self.getTypedRuleContext(CymbolParser.ExprStatContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_ifElseExprStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseExprStat" ):
                return visitor.visitIfElseExprStat(self)
            else:
                return visitor.visitChildren(self)




    def ifElseExprStat(self):

        localctx = CymbolParser.IfElseExprStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifElseExprStat)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.ifElseStat()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.returnStat()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 105
                self.assignStat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.exprStat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(CymbolParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CymbolParser.RULE_exprStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStat" ):
                return visitor.visitExprStat(self)
            else:
                return visitor.visitChildren(self)




    def exprStat(self):

        localctx = CymbolParser.ExprStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exprStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.expr(0)
            self.state = 110
            self.match(CymbolParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CymbolParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CymbolParser.COMMA)
            else:
                return self.getToken(CymbolParser.COMMA, i)

        def getRuleIndex(self):
            return CymbolParser.RULE_exprList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprList" ):
                return visitor.visitExprList(self)
            else:
                return visitor.visitChildren(self)




    def exprList(self):

        localctx = CymbolParser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.expr(0)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CymbolParser.COMMA:
                self.state = 113
                self.match(CymbolParser.COMMA)
                self.state = 114
                self.expr(0)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CymbolParser.RULE_ifStat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfStatmentCallContext(IfStatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.IfStatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(CymbolParser.IF, 0)
        def LP(self):
            return self.getToken(CymbolParser.LP, 0)
        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)

        def RP(self):
            return self.getToken(CymbolParser.RP, 0)
        def ifElseExprStat(self):
            return self.getTypedRuleContext(CymbolParser.IfElseExprStatContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatmentCall" ):
                return visitor.visitIfStatmentCall(self)
            else:
                return visitor.visitChildren(self)



    def ifStat(self):

        localctx = CymbolParser.IfStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ifStat)
        try:
            localctx = CymbolParser.IfStatmentCallContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(CymbolParser.IF)
            self.state = 121
            self.match(CymbolParser.LP)
            self.state = 122
            self.expr(0)
            self.state = 123
            self.match(CymbolParser.RP)
            self.state = 124
            self.ifElseExprStat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(CymbolParser.ELSE, 0)

        def ifElseExprStat(self):
            return self.getTypedRuleContext(CymbolParser.IfElseExprStatContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_elseStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseStat" ):
                return visitor.visitElseStat(self)
            else:
                return visitor.visitChildren(self)




    def elseStat(self):
